--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
   <meta name="apple-mobile-web-app-title" content="eFood">
   <link rel="apple-touch-icon" href="favicon.png">
 
-  <title>eFood</title>
+  <title>Lamada</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -48,11 +48,6 @@
   <div class="preloader-container">
     <!-- <img width="80" class="preloader-img" src="assets/img/preloader.png" alt=""> -->
     <div id="animation-container">
-      <img width="80" src="assets/loader_image_1.png" class="animation-image" alt="" />
-      <img width="80" src="assets/loader_image_2.png" class="animation-image" alt="" />
-      <img width="80" src="assets/loader_image_3.png" class="animation-image" alt="" />
-      <img width="80" src="assets/loader_image_4.png" class="animation-image" alt="" />
-      <img width="80" src="assets/loader_image_5.png" class="animation-image" alt="" />
     </div>
     <div class="loader"></div>
   </div>
